--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -28,3 +28,5 @@ es:
     validate_sign_up_params: "Los datos introducidos en la solicitud de acceso no son válidos."
     validate_account_update_params: "Los datos introducidos en la solicitud de actualización no son válidos."
     not_email: "no es un correo electrónico"
+    messages:
+      already_in_use: ya ha sido ocupado
