--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -23,10 +23,28 @@ pl:
       password_not_required: "To konto nie wymaga podania hasła. Zaloguj się używając konta %{provider}."
       missing_passwords: 'Musisz wypełnić wszystkie pola z etykietą "hasło" oraz "potwierdzenie hasła".'
       successfully_updated: "Twoje hasło zostało zaktualizowane."
-
   errors:
     validate_sign_up_params: "Proszę dostarczyć odpowiednie dane logowania w ciele zapytania."
     validate_account_update_params: "Proszę dostarczyć odpowiednie dane aktualizacji konta w ciele zapytania."
     not_email: "nie jest prawidłowym adresem e-mail"
     messages:
       already_in_use: "już w użyciu"
+  devise:
+    mailer:
+      confirmation_instructions:
+        subject: "Instrukcji potwierdzania"
+        confirm_link_msg: "Możesz potwierdzić swój e-mail konta poprzez link poniżej :"
+        confirm_account_link: "Potwierdź swoje konto"
+      reset_password_instructions:
+        subject: "Instrukcje resetowania hasła"
+        request_reset_link_msg: "Ktoś o link do zmiany hasła . Można to zrobić za pośrednictwem linku poniżej ."
+        password_change_link: "Zmień hasło"
+        ignore_mail_msg: "Jeśli jej nie potrzebuję , zignoruj ​​tę wiadomość."
+        no_changes_msg: "Twoje hasło nie zmieni , dopóki dostęp powyższy link i utwórz nowy ."
+      unlock_instructions:
+        subject: "Instrukcje do odblokowania"
+        account_lock_msg: "Twoje konto zostało zablokowane z powodu zbyt dużej liczby nieudanych znak w próbach ."
+        unlock_link_msg: "Kliknij poniższy link, aby odblokować konto :"
+        unlock_link: "Odblokować konto"
+  hello: halo
+  welcome: witam
