--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -23,10 +23,28 @@ pt:
       password_not_required: "Esta conta não necessita de uma senha. Faça login utilizando %{provider}."
       missing_passwords: 'Preencha a senha e a confirmação de senha.'
       successfully_updated: "Senha atualizada com sucesso."
-
   errors:
     validate_sign_up_params: "Os dados submetidos na requisição de registo são inválidos."
     validate_account_update_params: "Os dados submetidos para atualização de conta são inválidos."
     not_email: "não é um e-mail"
     messages:
       already_in_use: "em uso"
+  devise:
+    mailer:
+      confirmation_instructions:
+        subject: "Instruções de confirmação"
+        confirm_link_msg: "Você pode confirmar a sua conta de e-mail através do link abaixo :"
+        confirm_account_link: "Confirme conta"
+      reset_password_instructions:
+        subject: "Instruções para redefinir sua senha"
+        request_reset_link_msg: "Alguém pediu um link para mudar sua senha. Você pode fazer isso através do link abaixo "
+        password_change_link: "Alterar a senha"
+        ignore_mail_msg: "Se você não pediu isso, por favor, ignore este e-mail."
+        no_changes_msg: "Sua senha não será alterada até que você acessar o link acima e criar um novo."
+      unlock_instructions:
+        subject: "Instruções de desbloqueio"
+        account_lock_msg: "A sua conta foi bloqueada devido a um número excessivo de sinal de sucesso em tentativas."
+        unlock_link_msg: "Clique no link abaixo para desbloquear sua conta:"
+        unlock_link: "Desbloquear minha conta"
+  hello: "olá"
+  welcome: "bem-vindo"
