--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,11 +23,29 @@ ru:
       password_not_required: "Эта учетная запись не требует пароля. Войдите используя учетную запись %{provider}."
       missing_passwords: 'Вы должны заполнить поля "пароль" и "повторите пароль".'
       successfully_updated: "Ваш пароль успешно обновлён."
-
   errors:
     validate_sign_up_params: "Пожалуйста, укажите надлежащие данные для регистрации в теле запроса."
     validate_account_update_params: "Пожалуйста, укажите надлежащие данные для обновления учетной записи в теле запроса."
     not_email: "не является электронной почтой"
     messages:
       already_in_use: "уже используется"
+  devise:
+    mailer:
+      confirmation_instructions:
+        subject: "Инструкции подтверждения"
+        confirm_link_msg: "Вы можете подтвердить ваш адрес электронной почты через ссылку ниже :"
+        confirm_account_link: Подтвердите свой ​​счет
+      reset_password_instructions:
+        subject: "Инструкции для восстановления пароля"
+        request_reset_link_msg: "Кто-то просил ссылку , чтобы изменить пароль . Вы можете сделать это через ссылку ниже."
+        password_change_link: "Изменить пароль"
+        ignore_mail_msg: "If you didn't request this, please ignore this email."
+        no_changes_msg: "Ваш пароль не изменится, пока вы не открыть ссылку выше и создать новый."
+      unlock_instructions:
+        subject: "Разблокировать Инструкции"
+        account_lock_msg: "Ваш аккаунт был заблокирован из-за чрезмерного количества неудачных попыток в знак ."
+        unlock_link_msg: "Нажмите на ссылку ниже, чтобы разблокировать свой ​​аккаунт :"
+        unlock_link: "Открой свой ​​аккаунт"  
+  hello: "Здравствуйте"
+  welcome: "Добро пожаловат"
 
