fix(locales): fix / standardize errors.messages.already_in_use locale entries

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -28,5 +28,5 @@ de:
     validate_sign_up_params: "Bitte übermitteln sie vollständige Anmeldeinformationen im Body des Requests."
     validate_account_update_params: "Bitte übermitteln sie vollständige Informationen zur Aktualisierung im Body des Requests."
     not_email: "ist keine E-Mail Adresse"
-    message:
+    messages:
       already_in_use: "bereits in Verwendung"
