--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,5 +28,5 @@ en:
     validate_sign_up_params: "Please submit proper sign up data in request body."
     validate_account_update_params: "Please submit proper account update data in request body."
     not_email: "is not an email"
-    message:
+    messages:
       already_in_use: already in use
