Standardize errors.messages.already_in_use

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -28,6 +28,6 @@ ru:
     validate_sign_up_params: "Пожалуйста, укажите надлежащие данные для регистрации в теле запроса."
     validate_account_update_params: "Пожалуйста, укажите надлежащие данные для обновления учетной записи в теле запроса."
     not_email: "не является электронной почтой"
-    message:
+    messages:
       already_in_use: "уже используется"
 
