Clean locale files and re-arrange `errors` locale key
1. The locale files have been cleaned to be more consistent. Some mistakes have been corrected.

2. By convention in Rails, `errors` locale key is structured as follow:

```yaml
errors:
  format: "%{attribute} %{message}"
    messages:
      accepted: must be accepted
```

It would be nicer to have devise_token_auth following it. So the structure as be re-arrange and the code updated.

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -8,19 +8,19 @@ pt-BR:
     token_validations:
       invalid: "Dados de login inválidos."
     registrations:
-      missing_confirm_success_url: "Parâmetro `confirm_success_url` não informado."
-      redirect_url_not_allowed: "Redirecionamento para %{redirect_url} não permitido."
-      email_already_exists: "Já existe uma conta com o email %{email}."
-      account_with_uid_destroyed: "A conta com uid %{uid} foi excluída."
+      missing_confirm_success_url: "Parâmetro 'confirm_success_url' não informado."
+      redirect_url_not_allowed: "Redirecionamento para '%{redirect_url}' não permitido."
+      email_already_exists: "Já existe uma conta com o email '%{email}'."
+      account_with_uid_destroyed: "A conta com uid '%{uid}' foi excluída."
       account_to_destroy_not_found: "Não foi possível encontrar a conta para exclusão."
       user_not_found: "Usuário não encontrado."
     passwords:
       missing_email: "Informe o endereço de e-mail."
       missing_redirect_url: "URL para redirecionamento não informada."
-      not_allowed_redirect_url: "Redirecionamento para %{redirect_url} não permitido."
+      not_allowed_redirect_url: "Redirecionamento para '%{redirect_url}' não permitido."
       sended: "Você receberá um e-mail com instruções sobre como redefinir sua senha."
       user_not_found: "Não existe um usuário com o e-mail '%{email}'."
-      password_not_required: "Esta conta não necessita de uma senha. Faça login utilizando %{provider}."
+      password_not_required: "Esta conta não necessita de uma senha. Faça login utilizando '%{provider}'."
       missing_passwords: 'Preencha a senha e a confirmação de senha.'
       successfully_updated: "Senha atualizada com sucesso."
   errors:
