--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,7 +6,7 @@ ru:
       not_supported: "Используйте POST /sign_in для входа. GET запросы не поддерживаются."
       user_not_found: "Пользователь не найден или не вошел."
     token_validations:
-      invalid: "Неверные данные для входа"
+      invalid: "Неверные логин или пароль."
     registrations:
       missing_confirm_success_url: "Отсутствует параметр 'confirm_success_url'."
       redirect_url_not_allowed: "Переадресация на '%{redirect_url}' не разрешена."
@@ -34,18 +34,18 @@ ru:
       confirmation_instructions:
         subject: "Инструкции подтверждения"
         confirm_link_msg: "Вы можете подтвердить ваш адрес электронной почты через ссылку ниже :"
-        confirm_account_link: Подтвердите свой ​​счет
+        confirm_account_link: "Подтвердить свою учетную запись"
       reset_password_instructions:
         subject: "Инструкции для восстановления пароля"
-        request_reset_link_msg: "Кто-то просил ссылку , чтобы изменить пароль . Вы можете сделать это через ссылку ниже."
+        request_reset_link_msg: "Кто-то запросил ссылку на изменение пароля. Вы можете сделать это через ссылку ниже."
         password_change_link: "Изменить пароль"
-        ignore_mail_msg: "If you didn't request this, please ignore this email."
-        no_changes_msg: "Ваш пароль не изменится, пока вы не открыть ссылку выше и создать новый."
+        ignore_mail_msg: "Если Вы не запрашивали это, Вы можете проигнорировать это письмо." 
+        no_changes_msg: "Ваш пароль не изменится, пока вы не откроете ссылку выше и не создадите новый пароль."
       unlock_instructions:
         subject: "Разблокировать Инструкции"
-        account_lock_msg: "Ваш аккаунт был заблокирован из-за чрезмерного количества неудачных попыток в знак."
-        unlock_link_msg: "Нажмите на ссылку ниже, чтобы разблокировать свой ​​аккаунт :"
-        unlock_link: "Открой свой ​​аккаунт"
+        account_lock_msg: "Ваш аккаунт был заблокирован из-за чрезмерного количества неудачных попыток входа."
+        unlock_link_msg: "Нажмите на ссылку ниже, чтобы разблокировать свой аккаунт:"
+        unlock_link: "Разблокировать мою учетную запись"
   hello: "Здравствуйте"
-  welcome: "Добро пожаловат"
+  welcome: "Добро пожаловать"
 
