--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,7 +1,7 @@
 de:
   devise_token_auth:
     sessions:
-      not_confirmed: "Eine E-Mail zu Bestätigung wurde an Ihre Adresse '%{email}' gesendet. Sie müssen der Anleitung in der E-Mail folgen, um Ihren Account zu aktivieren."
+      not_confirmed: "Eine Bestätigungs-E-Mail wurde an Ihre Adresse '%{email}' gesendet. Sie müssen der Anleitung in der E-Mail folgen, um Ihren Account zu aktivieren."
       bad_credentials: "Ungültige Anmeldeinformationen. Bitte versuchen Sie es erneut."
       not_supported: "Verwenden Sie POST /sign_in zur Anmeldung. GET wird nicht unterstützt."
       user_not_found: "Benutzer wurde nicht gefunden oder konnte nicht angemeldet werden."
@@ -12,7 +12,7 @@ de:
       redirect_url_not_allowed: "Weiterleitung zu '%{redirect_url}' ist nicht gestattet."
       email_already_exists: "Es gibt bereits einen Account für '%{email}'."
       account_with_uid_destroyed: "Account mit der uid '%{uid}' wurde gelöscht."
-      account_to_destroy_not_found: "Der Account, der gelöscht werden soll, kann nicht gefunden werden."
+      account_to_destroy_not_found: "Der zu löschende Account kann nicht gefunden werden."
       user_not_found: "Benutzer kann nicht gefunden werden."
     passwords:
       missing_email: "Sie müssen eine E-Mail-Adresse angeben."
@@ -21,7 +21,7 @@ de:
       sended: "Ein E-Mail mit der Anleitung zum Zurücksetzen Ihres Passwortes wurde an '%{email}' gesendet."
       user_not_found: "Der Benutzer mit der E-Mail-Adresse '%{email}' kann nicht gefunden werden."
       password_not_required: "Dieser Account benötigt kein Passwort. Melden Sie sich stattdessen über Ihren Account bei '%{provider}' an."
-      missing_passwords: "Sie müssen die Felder 'Passwort' and 'Passwortbestätigung' ausfüllen."
+      missing_passwords: "Sie müssen die Felder 'Passwort' und 'Passwortbestätigung' ausfüllen."
       successfully_updated: "Ihr Passwort wurde erfolgreich aktualisiert."
   errors:
     messages:
