--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -50,7 +50,7 @@ uk:
         ignore_mail_msg: "Якщо Ви не робили запит на це, Ви можете проігнорувати цей лист."
         no_changes_msg: "Ваш пароль не зміниться, доки Ви не відкриєте посилання вище і не створите новий пароль."
       unlock_instructions:
-        subject: "Інструкції з розблокування",
+        subject: "Інструкції з розблокування"
         account_lock_msg: "Ваш акаунт було заблоковано через надмірну кількість невдалих спроб входу."
         unlock_link_msg: "Перейдіть за посиланням нижче, щоб розблокувати свій акаунт:"
         unlock_link: "Розблокувати мій обліковий запис"
