--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,8 +1,8 @@
 en:
   devise_token_auth:
     sessions:
-      not_confirmed: "A confirmation email was sent to your account at '%{email}'. You must follow the instructions in the email before your account can be activated"
-      bad_credentials: "Invalid login credentials. Please try again."
+      unconfirmed: "A confirmation email was sent to your account at '%{email}'. You must follow the instructions in the email before your account can be activated"
+      invalid: "Invalid login credentials. Please try again."
       not_supported: "Use POST /sign_in to sign in. GET is not supported."
       user_not_found: "User was not found or was not logged in."
     token_validations:
