--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,10 +1,12 @@
 ru:
   devise_token_auth:
     sessions:
-      not_confirmed: "Письмо с подтверждением Вашей учетной записи '%{email}' отправлено на электронную почту. Вы должны следовать инструкциям, приведенным в письме, прежде чем Ваша учетная запись сможет быть активирована"
-      bad_credentials: "Неверные логин или пароль. Пожалуйста, попробуйте еще раз."
+      unconfirmed: "Письмо с подтверждением Вашей учетной записи '%{email}' отправлено на электронную почту. Вы должны следовать инструкциям, приведенным в письме, прежде чем Ваша учетная запись сможет быть активирована"
+      invalid: "Неверные логин или пароль. Пожалуйста, попробуйте еще раз."
       not_supported: "Используйте POST /sign_in для входа. GET запросы не поддерживаются."
       user_not_found: "Пользователь не найден или не вошел."
+      last_attempt: "У вас осталась последняя попытка ввода пароля до блокировки учетной записи."
+      locked: "Ваша учетная запись заблокирована."
     token_validations:
       invalid: "Неверные логин или пароль."
     registrations:
