--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -1,8 +1,8 @@
 uk:
   devise_token_auth:
     sessions:
-      not_confirmed: "Будь ласка підтвердіть реєстрацію згідно інструкціям як ми вислали на Вашу пошту %{email}"
-      bad_credentials: "Логін або пароль введені невірно. Будь ласка, спробуйте ще"
+      unconfirmed: "Будь ласка підтвердіть реєстрацію згідно інструкціям як ми вислали на Вашу пошту %{email}"
+      invalid: "Логін або пароль введені невірно. Будь ласка, спробуйте ще"
       not_supported: "Використовуйте POST /sign_in для входу. GET запити не пітримуються."
       user_not_found: "Користувач не знайдений або не увійшов в систему"
     token_validations:
