--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,8 +1,8 @@
 de:
   devise_token_auth:
     sessions:
-      not_confirmed: "Eine Bestätigungs-E-Mail wurde an Ihre Adresse '%{email}' gesendet. Sie müssen der Anleitung in der E-Mail folgen, um Ihren Account zu aktivieren."
-      bad_credentials: "Ungültige Anmeldeinformationen. Bitte versuchen Sie es erneut."
+      unconfirmed: "Eine Bestätigungs-E-Mail wurde an Ihre Adresse '%{email}' gesendet. Sie müssen der Anleitung in der E-Mail folgen, um Ihren Account zu aktivieren."
+      invalid: "Ungültige Anmeldeinformationen. Bitte versuchen Sie es erneut."
       not_supported: "Verwenden Sie POST /sign_in zur Anmeldung. GET wird nicht unterstützt."
       user_not_found: "Benutzer wurde nicht gefunden oder konnte nicht angemeldet werden."
     token_validations:
