--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,8 +1,8 @@
 es:
   devise_token_auth:
     sessions:
-      not_confirmed: "Un correo electrónico de confirmación de su cuenta ha sido enviado a '%{email}'. Por favor, siga las instrucciones para validar su cuenta"
-      bad_credentials: "Identidad o contraseña no válida."
+      unconfirmed: "Un correo electrónico de confirmación de su cuenta ha sido enviado a '%{email}'. Por favor, siga las instrucciones para validar su cuenta"
+      invalid: "Identidad o contraseña no válida."
       not_supported: "Use POST /sign_in para la conexión. GET no esta disponible."
       user_not_found: "Usuario desconocido o no está conectado."
     token_validations:
