--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -2,11 +2,11 @@ da-DK:
   devise_token_auth:
     sessions:
       not_confirmed: "Der er sendt en bekræftelsesemail til din konto på '%{email}'. Følg venligst instruktionerne i emailen for at aktivere din konto."
-      bad_credentials: "Ugyldigt kombination af brugernavn og kodeord. Prøv venligst igen."
+      bad_credentials: "Ugyldig kombination af brugernavn og kodeord. Prøv venligst igen."
       not_supported: "Brug POST /sign_in for at logge ind. GET er ikke supporteret."
       user_not_found: "Brugeren er ikke fundet eller er ikke logget ind."
     token_validations:
-      invalid: "Ugyldig legitimationsoplysninger."
+      invalid: "Ugyldige legitimationsoplysninger."
     registrations:
       missing_confirm_success_url: "Der mangler et 'confirm_success_url' parameter."
       redirect_url_not_allowed: "Omdirigering til '%{redirect_url}' er ikke tilladt."
@@ -21,7 +21,7 @@ da-DK:
       sended: "En email er blevet sendt til '%{email}' med instruktioner for at nulstille dit kodeord."
       user_not_found: "Kan ikke finde en bruger med '%{email}'."
       password_not_required: "Denne bruger kræver ikke et kodeord. Log ind med '%{provider}' konto i stedet."
-      missing_passwords: "Du skal fylde alle felter ud som indeholder 'Password' og 'Password confirmation'."
+      missing_passwords: "Du skal udfylde alle felter som indeholder 'Password' og 'Password confirmation'."
       successfully_updated: "Dit kodeord er opdateret."
     unlocks:
       missing_email: "Du skal udfylde en email."
@@ -35,13 +35,13 @@ da-DK:
   devise:
     mailer:
       confirmation_instructions:
-        confirm_link_msg: "Du kan bekræfte din konto email for linket herunder:"
+        confirm_link_msg: "Du kan bekræfte din kontos email gennem linket herunder:"
         confirm_account_link: "Bekræft min konto"
       reset_password_instructions:
         request_reset_link_msg: "Der er nogle der har anmodet om et link til at ændre dit kodeord. Det kan du gøre gennem linket nedenfor."
         password_change_link: "Ændre mit kodeord."
         ignore_mail_msg: "Hvis du ikke anmodede om dette, ignorer venligst denne email."
-        no_changes_msg: "Din kodeord vil ikke ændres indtil du går ind på linket ovenfor og laver et nyt et."
+        no_changes_msg: "Dit kodeord vil ikke ændres indtil du går ind på linket ovenfor og opretter et nyt et."
       unlock_instructions:
         account_lock_msg: "Din konto er blevet låst fordi der er for mange forkerte log ind-forsøg."
         unlock_link_msg: "Klik linket nedenfor, for at låse din konto op:"
